@@ -65,6 +65,7 @@ do {								\
 
 #define DEC128_NAN_MASK64	UINT64_C(0x7C00000000000000)
 #define DEC128_SNAN_MASK64	UINT64_C(0x7E00000000000000)
+#define DEC128_INF_MASK64	UINT64_C(0x7800000000000000)
 
 
 typedef union
@@ -93,6 +94,7 @@ do {								\
 
 #define DEC64_NAN_MASK64	UINT64_C(0x7C00000000000000)
 #define DEC64_SNAN_MASK64	UINT64_C(0x7E00000000000000)
+#define DEC64_INF_MASK64	UINT64_C(0x7800000000000000)
 
 
 typedef union
@@ -111,5 +113,6 @@ do {								\
 
 #define DEC32_NAN_MASK		0x7C000000
 #define DEC32_SNAN_MASK		0x7E000000
+#define DEC32_INF_MASK		0x78000000
 
 #endif
